style.css
.loading-screen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: #000000;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    opacity: 1;
    z-index: 9999; /* Set a high z-index value to ensure it covers other content */
    transition: opacity 1s ease-in-out; /* Adjust the transition duration as needed */
}

* {
    box-sizing: border-box;
    margin: 0;
    max-width: 100%;
    font-weight: 300;

}
html, body {
    font-family: 'Zen Kaku Gothic Antique', sans-serif;
    margin: 0;
    padding: 0;
    overflow: hidden; /* Prevent default body overflow */
    scroll-behavior: smooth;

}

html {
    background-image: url("background.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;

  }
  
  body {
    display: flex;
    flex-direction: column;
    padding-top: 10px; /* Add padding to the top of the body */

}
header {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 20px 50px 20px 50px;
    width: 100%;
    color: white;
}
h1 {
    margin: 0; /* Remove top and bottom margin for h1 */
    font-size: 50px;
}
h2 {
    font-size: 30px;
    margin: 0;
}
h3 {
    font-size: 18px;
    margin: 0; /* Remove top and bottom margin for h3 */
}

p {
    font-size: 22px;
    margin: 0;
    max-width: 30%;
    padding-top: 20px;
}

.border-container {
    position: relative;
    width: calc(100vw - 50px); /* 100% of the viewport width minus the total padding */
    height: calc(100vh - 60px); /* 100% of the viewport height minus the total padding */
    margin-top: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
    margin-left: 25px;
    border: 2px solid #848484; /* Adjust border style as needed */
    box-sizing: border-box; /* Include border in the box's total width and height */
    overflow: auto; /* Allow content to be scrollable when necessary */
    padding: 0; /* Add padding inside the border */
}

/* Hide the scrollbar */
.border-container::-webkit-scrollbar {
    width: 0;
}



.box-container {
    color: aliceblue;
    display: flex;
    flex-direction: column;
    align-items: flex-end; /* Center items vertically */
    padding-right: 40px; /* Add padding to the right side */
    padding-bottom: 100px;
    opacity: 1;
    transition: opacity 0.5s ease-in-out; /* Add a fade transition effect */
}

/* Style for navigation buttons */
nav {
    margin: 20px;
    display: flex;
    flex-direction: column;
    padding: 10px;
    position: sticky;
    top: 0;
    z-index: 1;
    font-size: 22px;
}

nav a {
    color: white;
    text-decoration: none;
    padding: 8px;
    cursor: pointer;
    transition: color 0.2s;
}

nav a.selected {
    /* Style for the selected link */
    color: #ccc;
    font-weight: bold;
    position: relative;
}

nav a.selected::before {
    /* Style for the dot */
    content: '\2022'; /* Unicode character for a dot */
    color: #ccc;
    font-size: 20px;
    position: absolute;
    top: 50%;
    left: -12px;
    transform: translateY(-50%);
}

nav a:hover {
    color: #ccc;
}


li, ul {
    text-align:initial;
    list-style: none;
    padding-top: 10px;
}
.contactLink {
    color: rgb(215, 215, 215);
    text-decoration: none;
    transition: 500ms;
    font-size: 25px;
}
.contactLink:hover {
    color: rgb(0, 0, 0);
}
img {
    transition: filter 0.5s ease-in-out;
    border-radius: 5px;
}

img:hover {
    filter: brightness(30%); 
}
#info a {
    color: inherit;
    text-decoration: none;
    text-align: right;
}

#info h2 {
    margin-right: 10px;
    margin-top: 10px;
}

#info a:hover {
    /* Add hover effect if needed */
    filter: brightness(30%);
}
/* Add styles for the info list */
.info-list {
    list-style: none;
    padding: 0;
    margin: 0; /* Remove default margin for better consistency */
}

.info-list li {
    font-size: 20px;
    margin-bottom: 10px;
    vertical-align: middle; /* Align the text vertically in the middle */

}

.info-list li::before {
    content: '\2022';
    color: #ccc;
    margin-right: 5px;
}


/* Add styles for the info links container */
.info-links {
    display: flex;
    flex-direction: column;
    align-items: flex-end; /* Align links to the right */
    margin-top: 20px; /* Adjust as needed */
}

/* Adjust existing styles for better spacing */
#info p {
    margin-bottom: 20px;
}



.project-info {
    max-width: 100%;
    font-style: italic;
    font-size: 18px;
    color: #8e8e8e;
    margin-top: -20px;
}


.project-box {
    background-color: rgba(0, 0, 0, 0.5);
    padding: 15px;
   /* border-radius: 10px;*/
    margin-bottom: 0;
    width: 400px; /* Adjust the width as needed */
    box-sizing: border-box;
}

@media screen and (max-width: 600px) {
    h1 {
        font-size: 30px;
    }

    h3 {
        font-size: 10px;
    }

    h2 {
        font-size: 13px;
    }

    p {
        font-size: 13px;
        text-align: right;
        padding: 20px 5px 20px 10px;
        max-width: 90%;
    }

    nav {
        font-size: 15px;
    }

    nav a.selected::before {
        /* Style for the dot */
        color: #ccc;
        font-size: 15px;
        position: absolute;
        top: 50%;
        left: -4px;
        transform: translateY(-50%);
    }

    li,
    ul {
        font-size: 15px;
        padding-top: 10px;
    }

    header {
        padding: 10px;
    }

    .box-container {
        padding-right: 10px;
        padding-bottom: 50px;
    }


    .project-info {
        max-width: 100%;
        font-style: italic;
        font-size: 12px;
        color: #8e8e8e;
        margin-top: -20px;
    }

    .project-box {
        width: 200px;
    }

    .contactLink {
        font-size: 16px;
    }

    img {
        height: 50px;
    }
}

